@@ -14,7 +14,7 @@
     <!-- Association Groups -->
     <CommandClass id="133">
         <Associations num_groups="2">
-            <Group index="1" max_associations="5" label="Long press" auto="false"/>
+            <Group index="1" max_associations="5" label="Long press" auto="true"/>
             <Group index="2" max_associations="5" label="Short press" auto="true" />
         </Associations>
     </CommandClass>
